--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,43 @@
 body {
-    background-color: rgb(123, 158, 240);
+    background-color: rgb(91, 143, 203);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20pt;
+}
+ /* Container needed to position the button. Adjust the width as needed */
+ .container {
+    position: relative;
+    width: 50%;
+  }
+  
+  /* Make the image responsive */
+  .container img {
+    width: 100%;
+    height: auto;
+  }
+  
+  /* Style the button and place it in the middle of the container/image */
+  .container .btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: rgb(63, 126, 168);
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  .container .btn:hover {
+    background-color: rgb(11, 25, 110);
+  } 
+
+.card {
+    margin-top: 10pt;
+    background-color: white;
+    width: 500px,
+
 }
