--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: rgb(91, 143, 203);
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20pt;
+    font-size: 14pt;
 }
  /* Container needed to position the button. Adjust the width as needed */
  .container {
@@ -38,6 +38,17 @@ body {
 .card {
     margin-top: 10pt;
     background-color: white;
-    width: 500px,
 
+}
+
+#question-card {
+      width: 600px;
+      margin-left: 50px;
+}
+
+#submit {
+  position: relative;
+  width: 250px;
+  margin-left: 50px;
+  background-color: rgb(91, 143, 203);
 }
